# dotfiles

./: 'q  .gitignore  README.md  \  _config.yml  config  init.vim  kitty.conf  n  noic.sh  null-ls-config.lua  plugins.lua  rickroll.c  rust-tools.lua
.ccls-cache/@@home@momofor@dotfiles/: @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@9@backward@binders.h.blob  @usr@include@c++@9@bits@alloc_traits.h.blob  @usr@include@c++@9@bits@allocator.h.blob  @usr@include@c++@9@bits@basic_ios.h.blob  @usr@include@c++@9@bits@basic_ios.tcc.blob  @usr@include@c++@9@bits@basic_string.h.blob  @usr@include@c++@9@bits@basic_string.tcc.blob  @usr@include@c++@9@bits@char_traits.h.blob  @usr@include@c++@9@bits@concept_check.h.blob  @usr@include@c++@9@bits@cpp_type_traits.h.blob  @usr@include@c++@9@bits@cxxabi_forced.h.blob  @usr@include@c++@9@bits@cxxabi_init_exception.h.blob  @usr@include@c++@9@bits@exception.h.blob  @usr@include@c++@9@bits@exception_defines.h.blob  @usr@include@c++@9@bits@exception_ptr.h.blob  @usr@include@c++@9@bits@functexcept.h.blob  @usr@include@c++@9@bits@functional_hash.h.blob  @usr@include@c++@9@bits@hash_bytes.h.blob  (+166 more)
backups/: .config  .latexmkrc  RES-2022-02-03-1643927762-5_22_10.resbackup  absolute-rap-hits.m3u  audio_output_hyprland.sh  cargo-config.toml  colorscript.fish  config.fish  custom-work.json  doom-one.rasi  environment  fix_audio_crackling  hyprland.conf  improved-custom-work.json  keyd.conf  makepkg.conf  my-ublock-backup_2021-04-30_16.17.12.txt  my-ublock-backup_2022-04-10_21.03.35.txt  my-ublock-backup_2022-08-25_20.31.54.txt  my-ublock-dynamic-rules_2021-04-25_21.50.17.txt  my-ublock-dynamic-rules_2021-05-02_13.41.21.txt  my-ublock-static-filters_2021-04-25_21.49.15.txt  nord-myanimelist.css  nord-treesitter.vim  nord-treesitter.yml  nord-vimium.css  nord-youtube.css  packages.txt  plugins.lua  preamble_science.tex  prefs.js  profile  rp06xddt.default-nightly  spotify-sleek-color.ini  start-hyprland.sh  start-swww.sh  start-wob.sh  user.js  zram-generator.conf
backups/noiceu/: key4.db  (+31 more)
dircolors/: .dir_colors
scripts/: one.fish
scripts/scripts/rust/arduino-projects/arduino-write-serial/: Cargo.toml
scripts/scripts/rust/arduino-projects/arduino-write-serial/examples/: read.rs
scripts/scripts/rust/arduino-projects/arduino-write-serial/src/: gui.rs  main.rs  noice.rs  serial_communication.rs
scripts/scripts/rust/arduino-projects/blinking-test/: Cargo.toml
scripts/scripts/rust/arduino-projects/blinking-test/src/: main.rs
scripts/scripts/rust/learning-the-basics/async-mini-reddis/: Cargo.toml
scripts/scripts/rust/learning-the-basics/async-mini-reddis/examples/: hello-redis.rs
scripts/scripts/rust/manga-rust/: Cargo.toml
scripts/scripts/rust/manga-rust/src/: main.rs
scripts/scripts/rust/neovim-plugin/: Cargo.toml
scripts/scripts/rust/neovim-plugin/src/: lib.rs
scripts/scripts/rust/sway-config-lsp/: Cargo.toml  definitions.json  definitions.txt
scripts/scripts/rust/sway-config-lsp/src/: get_definitions.rs  main.rs
scripts/scripts/rust/test-board/: Cargo.toml
scripts/scripts/rust/test-board/src/: main.rs
tmux/: .tmux.conf
xresources/: .Xresources
zsh/: .zshrc
(+795 files in other folders)
