[package]
name = "manga-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.19.2", features = ["full"]}
hyper = { version = "0.14", features = ["full"] }
anyhow = "1.0.57"
futures = "0.3.21"
