[package]
name = "neovim-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mlua = {version = "0.7", features = ["luajit", "vendored", "module", "macros", "send", "async"]}
tokio = {version = "1.15.0", features = ["rt"]}
