[package]
name = "sway-config-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
serde = {version = "1.0.81", features = ["serde_derive"]}
serde_json = {version = "1.0.81", features = ["default"]}
tokio = {version = "1.18.2", features = ["full"]}
tower-lsp = "0.17.0"
