[package]
name = "arduino-write-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.0.1"
tokio = {version = "1.19.2", features = ["full"]}
tokio-serial = "5.4.3"
eframe = {version = "0.18.0", features = ["dark-light"]}
