[package]
name = "async-mini-reddis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.16.1", features = ["full"]}
mini-redis = "0.4.1"
bytes = "1.1.0"
parking_lot = {version = "0.12.0", features = ["nightly"]}
